styles/globals.css
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    color: #0f1b61;
    background: #f4f9fc;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

h1{
  font-family: 'Bitter', serif;
  font-size: 3rem;
  font-weight: 700;
}

/* @media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: #0f1b61;
    background: #f4f9fc;
  }
} */

